user delete. swagger fixes
