# app.js
@@ -60,7 +60,8 @@ swagger.configure(applicationUrl, '1.0.0');
 
 routes.init();
 app.get('/',                routes.index);
-app.get('/api/users/find', routes.get_user_by);
+app.get('/api/users/find',  routes.get_user_by);
+app.delete('/api/users/:id',routes.delete_user);
 app.get('/api/users/:id',   routes.get_user);
 app.put('/api/users/:id',   routes.update_user);
 app.post('/api/users',      routes.create_user);
